#设定版本名
CMAKE_MINIMUM_REQUIRED( VERSION	2.8 )
#设定工程名
project( RGBD_SLAM )
#设定编译器
SET( CMAKE_CXX_COMPILER "g++")

#设定可执行二进制文件的目录
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#设定存放编译出来的库文件的目录
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
#设为链接目录
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/bin )

#设定头文件的目录
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
#添加子文件夹，也就是进入源码继续构建
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/test )
